<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="toast_spotify">This button will launch your Spotify Streamer!</string>
    <string name="toast_scores">This button will launch your Scores App!</string>
    <string name="toast_library">This button will launch your Library App!</string>
    <string name="toast_build_it_bigger">This button will launch your Build It Bigger!</string>
    <string name="toast_xyz">This button will launch your XYZ Reader!</string>
    <string name="toast_own_app">This button will launch your own App!</string>
    <string name="label_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="label_scores_app">SCORES APP</string>
    <string name="label_library_app">LIBRARY APP</string>
    <string name="label_build_it_bigger">BUILD IT BIGGER</string>
    <string name="label_xyz_reader">XYZ READER</string>
    <string name="label_own_app">CAPSTONE: MY OWN APP</string>
</resources>
