<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_text"
        android:textSize="@dimen/title_size"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button1_top_margin"
        android:background="@color/colorOrange"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_spotify_streamer"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_generic_top_margin"
        android:background="@color/colorOrange"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_scores_app"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_generic_top_margin"
        android:background="@color/colorOrange"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_library_app"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_generic_top_margin"
        android:background="@color/colorOrange"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_build_it_bigger"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_generic_top_margin"
        android:background="@color/colorOrange"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_xyz_reader"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/button_width_generic"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_generic_top_margin"
        android:background="@color/colorOwnApp"
        android:gravity="center"
        android:onClick="displayAppInfo"
        android:text="@string/label_own_app"
        android:textStyle="bold"/>
</RelativeLayout>
